# bevy_egui

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: check.yml  deploy_examples.yml
examples/: absorb_input.rs  color_test.rs  file_browse.rs  paint_callback.rs  render_egui_to_image.rs  render_to_image_widget.rs  run_manually.rs  side_panel.rs  side_panel_2d.rs  side_panel_3d.rs  simple.rs  simple_multipass.rs  split_screen.rs  two_windows.rs  ui.rs
src/: egui_node.rs  egui_render_to_texture_node.rs  helpers.rs  input.rs  lib.rs  output.rs  picking.rs  render_systems.rs  systems.rs  text_agent.rs  web_clipboard.rs
src/render/: egui.wgsl  mod.rs  render_pass.rs  systems.rs
