[package]
name = "bevy_egui"
version = "0.34.1"
# Needed for LazyLock https://doc.rust-lang.org/stable/std/sync/struct.LazyLock.html
rust-version = "1.80.0"
authors = ["vladbat00 <vladyslav.batyrenko@gmail.com>"]
description = "A plugin for Egui integration into Bevy"
license = "MIT"
edition = "2021"
repository = "https://github.com/vladbat00/bevy_egui"
exclude = ["assets/**/*", ".github/**/*"]

[package.metadata.docs.rs]
features = ["bevy_winit/x11", "immutable_ctx"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["manage_clipboard", "open_url", "default_fonts", "render", "picking"]
accesskit_placeholder = ["egui/accesskit", "bevy_a11y"] # the feature won't compile until Egui updates its accesskit version, hence disabled by default
immutable_ctx = []
manage_clipboard = ["arboard", "thread_local", "bytemuck"]
open_url = ["webbrowser"]
default_fonts = ["egui/default_fonts"]
render = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_image",
    "bevy_render",
    "bevy_transform",
    "encase",
    "bytemuck",
    "egui/bytemuck",
    "wgpu-types",
]
picking = ["render", "bevy_picking"]
serde = ["egui/serde"]
# The enabled logs will print with the info log level, to make it less cumbersome to debug in browsers.
log_input_events = []
# The enabled logs will print with the info log level, to make it less cumbersome to debug in browsers.
log_file_dnd_events = []

[[example]]
name = "absorb_input"
required-features = ["render"]
[[example]]
name = "color_test"
required-features = ["render"]
[[example]]
name = "paint_callback"
required-features = ["render"]
[[example]]
name = "render_to_image_widget"
required-features = ["render"]
[[example]]
name = "run_manually"
required-features = ["render"]
[[example]]
name = "side_panel"
required-features = ["render"]
[[example]]
name = "simple"
required-features = ["render"]
[[example]]
name = "split_screen"
required-features = ["render"]
[[example]]
name = "two_windows"
required-features = ["render"]
[[example]]
name = "ui"
required-features = ["render"]
[[example]]
name = "render_egui_to_image"
required-features = ["picking", "render", "bevy/bevy_gizmos"]
[[example]]
name = "file_browse"
required-features = ["render"]

[dependencies]
egui = { version = "0.31", default-features = false }
bevy_a11y = { version = "0.16.0", optional = true }
bevy_app = "0.16.0"
bevy_derive = "0.16.0"
bevy_ecs = "0.16.0"
bevy_input = "0.16.0"
bevy_log = "0.16.0"
bevy_math = "0.16.0"
bevy_reflect = "0.16.0"
bevy_time = "0.16.0"
bevy_transform = { version = "0.16.1", optional = true }
bevy_winit = "0.16.0"
bevy_window = "0.16.0"
bevy_platform = "0.16.0"

# `open_url` feature
webbrowser = { version = "1.0.1", optional = true }

# `render` feature
bytemuck = { version = "1", optional = true }
bevy_asset = { version = "0.16.0", optional = true }
bevy_core_pipeline = { version = "0.16.1", optional = true }
bevy_image = { version = "0.16.0", optional = true }
bevy_render = { version = "0.16.0", optional = true }
encase = { version = "0.10", optional = true }
wgpu-types = { version = "24.0", optional = true }

# `picking` feature
bevy_picking = { version = "0.16.0", optional = true }

# `manage_clipboard` feature
[target.'cfg(not(any(target_arch = "wasm32", target_os = "android")))'.dependencies]
arboard = { version = "3.2.0", optional = true }
thread_local = { version = "1.1.0", optional = true }

[dev-dependencies]
version-sync = "0.9.5"
bevy = { version = "0.16.0", default-features = false, features = [
    "accesskit_unix",
    "bevy_log",
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_mesh_picking_backend",
    "bevy_sprite",
    "bevy_window",
    "bevy_winit",
    "android-game-activity",
    "png",
    "std",
    "tonemapping_luts",
    "webgl2",
    "x11",
] }
egui = { version = "0.31", default-features = false, features = ["bytemuck"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios", target_arch = "wasm32")))'.dev-dependencies]
rfd = "0.15"

[target.'cfg(target_arch = "wasm32")'.dependencies]
winit = "0.30"
web-sys = { version = "0.3.74", features = [
    "Clipboard",
    "ClipboardEvent",
    "ClipboardItem",
    "CompositionEvent",
    "DataTransfer",
    "Document",
    "EventTarget",
    "HtmlInputElement",
    "InputEvent",
    "KeyboardEvent",
    "Navigator",
    "TouchEvent",
    "Window",
] }
image = { version = "0.25.5", default-features = false, features = ["png"] } # For copying images
js-sys = "0.3.63"
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.36"
crossbeam-channel = "0.5.8"
